--- a/mobile-app-ws/pom.xml
+++ b/mobile-app-ws/pom.xml
@@ -86,6 +86,12 @@
 		    <artifactId>aws-java-sdk-ses</artifactId>
 		    <version>1.12.134</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <scope>runtime</scope>
+		</dependency>
 
 	</dependencies>
 
