--- a/mobile-app-ws/src/main/resources/application.properties
+++ b/mobile-app-ws/src/main/resources/application.properties
@@ -1,9 +1,19 @@
-spring.datasource.username=RestWS
-spring.datasource.password=RestWS_2022
-spring.datasource.url=jdbc:mysql://localhost:3306/rest_app
+#MySql DATABASE
+#spring.datasource.username=RestWS
+#spring.datasource.password=RestWS_2022
+#spring.datasource.url=jdbc:mysql://localhost:3306/rest_app
 spring.jpa.hibernate.ddl-auto=update
+
+#H2 DATABASE
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 tokenSecret=jf9i4jgu83nfl0jfu57ejf7
 
 server.error.include-stacktrace=never
 server.servlet.context-path=/mobile-app-ws
+
+server.port=8888
