--- a/mobile-app-ws/src/main/resources/application.properties
+++ b/mobile-app-ws/src/main/resources/application.properties
@@ -6,13 +6,21 @@ server.servlet.context-path=/mobile-app-ws
 server.error.include-stacktrace=never
 
 #MySql DATABASE
-#spring.datasource.url=jdbc:mysql://localhost:3306/rest_app
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_app
 
 #H2 DATABASE
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
 
 spring.datasource.username=RestWS
 spring.datasource.password=RestWS_2022
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+userController.authorization-header.description=Bearer JWT Token
+userController.getUser.apiOperations-notes=This Web Service Endpoint returns User Details. Uses public User Idun URL Path
+
